# Luminol-Vala

./: com.nowaffles.luminol.json  meson.build
data/: com.nowaffles.luminol.appdata.xml.in  com.nowaffles.luminol.desktop.in  com.nowaffles.luminol.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  luminol.gresource.xml  main.vala  meson.build  window.ui  window.vala
